fix: submit spark 1.6 build script